# FeatureFlux

./: Dockerfile  README.md  docker-compose.yml  generate_large_data.py  pyproject.toml  requirements.txt  setup.py  train_tabular_model.py  transactions.csv  transactions_raw.csv
data/: transactions.csv
src/: config.py
src/analysis/: bayesian_net.py  correlation.py  importance.py
src/feature_store/: statistics.py  store.py  versioning.py
src/featureflux.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ingestion/: batch_job.py  producer.py  spark_batch_job.py
src/models/: base.py  model_loader.py
src/models/image_model/: model.py
src/models/keras_model/: model.py
src/models/sentiment_model/: model.py
src/models/tabular_model/: model.py  tabular_model.pkl  training_data.csv
src/models/timeseries_model/: model.py
src/service/: cli.py  consumer.py  server.py
src/utils/: data_utils.py  logger.py
tests/: test_end_to_end.py  test_feature_store.py  test_model_loader.py
