# pyproject.toml: Build system configuration using PEP 517/518.
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featureflux"
version = "1.0.0"
description = "A fully modular, scalable ML serving platform integrating deep learning, statistical analysis, and distributed systems."
readme = "README.md"
license = {text = ""}
authors = [
  {name = "Vishal Srivastava", email = "srivasv3@uci.edu"}
]
dependencies = [
  "fastapi==0.95.2",
  "uvicorn==0.22.0",
  "kafka-python==2.0.2",
  "redis==4.5.5",
  "pandas==1.5.3",
  "scikit-learn==1.2.2",
  "numpy==1.23.5",
  "pyspark==3.3.1",
  "pgmpy==0.1.18",           # For probabilistic graphical models
  "click==8.1.3",
  "python-dotenv==0.21.0",
  "torch==2.0.1",            # For PyTorch deep learning
  "torchvision==0.15.2",
  "tensorflow-macos==2.12.0",# TensorFlow optimized for macOS
  "tensorflow-metal==0.6.0"  # Metal plugin for TensorFlow GPU acceleration on macOS
]